--- a/thumb.html
+++ b/thumb.html
@@ -226,6 +226,7 @@
 	function closeCode() {
 		document.getElementById("clone").innerHTML = ""
 		clone.textContent = document.querySelector('.pre').setAttribute('hidden',"true")
+		window.document.body.removeclassName = 'edit'
 	}
 	</script>
 	<pre class="pre" hidden>
