--- a/index.html
+++ b/index.html
@@ -44,16 +44,16 @@
 			display: flex;
 			position: absolute;
 			border-radius: 4px;
-			text-transform: uppercase;
+			text-transform: capitalize;
 			position: absolute;
-			top: 26px;
+			top: 199px;
 			margin-left: 50px;
 		}
 
 		body.edit .nature {
 			box-shadow: 0 1px 3px rgb(0 0 0 / 12%), 0 1px 2px rgb(0 0 0 / 24%);
 			transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-			text-shadow: 2px 2px 3px #6a6a6a;
+			text-shadow: 2px 2px 3px #c4c4c4;
 			background-color: #ffffff2b;
 		}
 		.show {
@@ -151,7 +151,8 @@
 				save
 			</span>
 		</a>
-		<h1 class='nature' id="nature" >
+		<section class='nature' id="nature" style="display: flex; max-width: 999px;" >
+			
 			<a href="javascript:void(0)" class="show show-right" contenteditable="false" onclick="moveRight()">
 				<span class="material-icons">
 					chevron_right
@@ -172,8 +173,20 @@
 					expand_more
 				</span>					
 			</a>
-			WebShop
-		</h1>
+			
+		 	<p style="text-align:center; font-size:13px; background-color:#fff; color: grey; font-weight: 100; padding: 40px 20px; border-radius: 4px;">
+				Traditional Blog Heading  <br><br><br><br>
+
+				My Blog content     name is syamnath and  i am a  developer
+				I love my Tradition and I proud of its varied heritage <br><br>
+
+				പ്രസിദ്ധീകരണ, ഗ്രാഫിക് ഡിസൈൻ മേഖലകളിൽ ഉപയോഗിക്കുന്ന ഒരു പദമാണ് Lorem ipsum.വികസനഘട്ടത്തിലിരിക്കുന്നതോ 
+				ഉപയോഗിക്കാത്തതോ ആയ പേജുകളിൽ ആണ് ഈ പദം 
+				ഉപയോഗിക്കുന്നത്.പേജിന്റെ രൂപകല്പന, ഫോണ്ടുകളുടെ പ്രത്യേകതകൾ എന്നിവ പ്രദർശിപ്പിക്കുക എന്നതാണ് ഇതിന്റെ ഉദ്ദേശ്യം.
+			
+			</p>
+			<img src="https://source.unsplash.com/300x300/?tradition" alt="Tradition" contenteditable="false" style="margin-left: 20px;border-radius: 10px;">
+		</section>
 	</section>
 	<script type="text/javascript">
 	function editmagazine() {
