--- a/index.html
+++ b/index.html
@@ -35,11 +35,24 @@
 		.material-icons {
 			margin-left: 10px;
 		}
+		@keyframes slideInFromLeft {
+		0% {
+			transform: translateX(-100%);
+		}
+		100% {
+			transform: translateX(0);
+		}
+		}
+
+		.nature {  
+		/* This section calls the slideInFromLeft animation we defined above */
+		animation: 2s ease-out 0s 1 slideInFromLeft;
+		}
 		.nature {
 			padding: 20px 40px;
 			font-weight: 700;
 			font-size: 120px;
-			text-align: center;
+			/* text-align: center; */
 			color: #ffffff;
 			display: flex;
 			position: absolute;
@@ -130,7 +143,7 @@
 	</style>
   
 </head>
-<body style="background-size: cover; background-position: center center; background-attachment: fixed; background-image:url('https://source.unsplash.com/3840x2160/?nature'); background-repeat:no-repeat;">
+<body style="background-size: cover; background-position: center center; background-attachment: fixed; background-image:url('https://source.unsplash.com/3840x2160/?India'); background-repeat:no-repeat;">
 	<section class="fog magazine">
 		<a class="refresh" onclick="location.reload();" style="background:pink; color: white;">
 			Change background
@@ -174,18 +187,23 @@
 				</span>					
 			</a>
 			
-		 	<p style="text-align:center; font-size:13px; background-color:#fff; color: grey; font-weight: 100; padding: 40px 20px; border-radius: 4px;">
-				Traditional Blog Heading  <br><br><br><br>
+		 	<p style=" font-size:13px; background-color:#fff; color: grey; font-weight: 100; padding: 40px 20px; border-radius: 4px;">
+				<span style="font-weight:00;">Traditional Blog Heading </span> <br><br>
+				<span style="font-weight:400; color: blue;"> Posted on Nov 18 2021  &nbsp; By: Syamnath S<br><br></span>
 
-				My Blog content     name is syamnath and  i am a  developer
+				My Blog <br><br>     name is syamnath and  i am a  developer
 				I love my Tradition and I proud of its varied heritage <br><br>
 
 				പ്രസിദ്ധീകരണ, ഗ്രാഫിക് ഡിസൈൻ മേഖലകളിൽ ഉപയോഗിക്കുന്ന ഒരു പദമാണ് Lorem ipsum.വികസനഘട്ടത്തിലിരിക്കുന്നതോ 
 				ഉപയോഗിക്കാത്തതോ ആയ പേജുകളിൽ ആണ് ഈ പദം 
-				ഉപയോഗിക്കുന്നത്.പേജിന്റെ രൂപകല്പന, ഫോണ്ടുകളുടെ പ്രത്യേകതകൾ എന്നിവ പ്രദർശിപ്പിക്കുക എന്നതാണ് ഇതിന്റെ ഉദ്ദേശ്യം.
+				ഉപയോഗിക്കുന്നത്.പേജിന്റെ രൂപകല്പന, ഫോണ്ടുകളുടെ പ്രത്യേകതകൾ എന്നിവ പ്രദർശിപ്പിക്കുക എന്നതാണ് ഇതിന്റെ ഉദ്ദേശ്യം. <br><br>
+
+				लोरेम इप्सम एक शब्द है जिसका उपयोग प्रकाशन और ग्राफिक डिजाइन के क्षेत्र में उन पृष्ठों को संदर्भित करने के लिए 
+				किया जाता है जो विकास के अधीन हैं या उपयोग में नहीं हैं। <br><br>
+				<span onclick="alert('Working')" href="javascript:void();" style="font-size:15px; text-transform: capitalize; color:darkyellow; cursor:pointer;">Read More</span>
 			
 			</p>
-			<img src="https://source.unsplash.com/300x300/?tradition" alt="Tradition" contenteditable="false" style="margin-left: 20px;border-radius: 10px;">
+			<img src="https://source.unsplash.com/300x300/?kerala" alt="Tradition" contenteditable="false" style="margin-left: 20px;border-radius: 10px;">
 		</section>
 	</section>
 	<script type="text/javascript">
