--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 
 <body style="position: relative;">
-	<figure style="
+	<figure translate="yes" style="
 		position: absolute;
 		top: 50px;
 		right: 0;
