--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		font-size: 22px;
 		text-transform: capitalize;
 	">
-		Hi dev<span style="text-transform: lowercase;font-size: 22px;">! </span>	
+		devi! Hi 	
 	</figure>
 	<canvas width="500" height="720" id="canv" >
 
