--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 		body {
 			font-family: 'Noto Sans', sans-serif;
-			margin: 1px;
-			padding: 1px;
+			margin: 0;
+			padding: 0;
 		}
 		
 	</style>
