--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 		font-size: 22px;
 		text-transform: capitalize;
 	">
-		devi
+			<img src="waving_hand_black_24dp.svg" alt="FRIENDS"> 
+		 devi 
+			<img src="volunteer_activism_black_24dp.svg" alt="love">
 	</figure>
 	<canvas width="500" height="720" id="canv" >
 
