--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   
 </head>
 
-<body style="position: relative;">
+<body contenteditable="true" style="position: relative;">
 	<figure translate="yes" style="
 		position: absolute;
 		top: 200px;
