--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Hi ! devi</title>
+  <title>Matrix | Welcome Neo</title>
   <script src="https://unpkg.com/vue"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<style>
-		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+		@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Orbitron:wght@400;500;600;700;800;900&display=swap');
 		body {
 			font-family: 'Noto Sans', sans-serif;
 			margin: 0;
@@ -31,14 +31,16 @@
 		left: 0;
 		margin: auto;
 		text-align: center;
+		font-family: 'Orbitron', Noto Sans , sans-serif;
 		z-index: 999;
 		color: #a2ffa2;
-		font-size: 22px;
-		text-transform: capitalize;
+		font-size: 25px;
+		font-weight: 600;
+		text-transform: uppercase;
 	">
-			<img src="waving_hand_black_24dp.svg" alt="FRIENDS"> 
-		 devi 
-			<img src="volunteer_activism_black_24dp.svg" alt="love">
+			<!-- <img src="waving_hand_black_24dp.svg" alt="FRIENDS">  -->
+		 The MAtrix 
+			<!-- <img src="volunteer_activism_black_24dp.svg" alt="love"> -->
 	</figure>
 	<canvas width="500" height="720" id="canv" >
 
