--- a/index.html
+++ b/index.html
@@ -23,7 +23,24 @@
   
 </head>
 
-<body contenteditable="true" style="position: relative;">
+<body style="position: relative;">
+	<section translate="yes" style="
+		position: absolute;
+		top: 179px;
+		right: 0;
+		left: 0;
+		margin: auto;
+		text-align: center;
+		font-family: Noto Sans , sans-serif;
+		z-index: 999;
+		color: #a2ffa2;
+		font-size: 16px;
+		font-weight: 400;
+		text-transform: uppercase;
+		">
+			The 
+	</section>
+
 	<figure translate="yes" style="
 		position: absolute;
 		top: 200px;
@@ -34,14 +51,30 @@
 		font-family: 'Orbitron', Noto Sans , sans-serif;
 		z-index: 999;
 		color: #a2ffa2;
-		font-size: 25px;
-		font-weight: 600;
+		font-size: 37px;
+		font-weight: 700;
 		text-transform: uppercase;
 	">
 			<!-- <img src="waving_hand_black_24dp.svg" alt="FRIENDS">  -->
-		 The MAtrix 
+		 Matrix 
 			<!-- <img src="volunteer_activism_black_24dp.svg" alt="love"> -->
 	</figure>
+	<section contenteditable="true" translate="yes" style="
+		position: absolute;
+		top: 245px;
+		right: 0;
+		left: 0;
+		margin: auto;
+		text-align: center;
+		font-family: Noto Sans , sans-serif;
+		z-index: 999;
+		color: #a2ffa2;
+		font-size: 15px;
+		font-weight: 600;
+		text-transform: uppercase;
+		">
+			Avatar 
+	</section>
 	<canvas width="500" height="720" id="canv" >
 
 	<script type="text/javascript">
