--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body style="position: relative;">
 	<section translate="yes" style="
 		position: absolute;
-		top: 179px;
+		top: 186px;
 		right: 0;
 		left: 0;
 		margin: auto;
@@ -73,7 +73,7 @@
 		font-weight: 600;
 		text-transform: uppercase;
 		">
-			Avatar 
+			Code 
 	</section>
 	<canvas width="500" height="720" id="canv" >
 
