--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 		font-weight: 400;
 		text-transform: uppercase;
 		">
-			Code 
+			Manual Code 
 	</section>
 	<canvas width="500" height="720" id="canv" >
 
