--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Matrix | Welcome Neo</title>
+  <title>Matrix | Welcome Dev A Is</title>
   <script src="https://unpkg.com/vue"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -69,7 +69,7 @@
 		font-family: Noto Sans , sans-serif;
 		z-index: 999;
 		color: #a2ffa2;
-		font-size: 19px;
+		font-size: 16px;
 		font-weight: 400;
 		text-transform: uppercase;
 		">
