--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 		text-transform: uppercase;
 	">
 			<!-- <img src="waving_hand_black_24dp.svg" alt="FRIENDS">  -->
-		 Matrix 
+		Glitch
 			<!-- <img src="volunteer_activism_black_24dp.svg" alt="love"> -->
 	</figure>
 	<section contenteditable="true" translate="yes" style="
@@ -73,8 +73,29 @@
 		font-weight: 400;
 		text-transform: uppercase;
 		">
-			Manual Code 
+			Manual Code Mode
 	</section>
+	<a href="https://bodhiintellect.com" contenteditable="false" translate="yes" style="
+		position: absolute;
+    	top: 300px;
+		right: 0;
+		left: 0;
+		margin: auto;
+		text-align: center;
+		font-family: Noto Sans , sans-serif;
+		z-index: 999;
+		color: #FFD700;
+		font-size: 12px;
+		font-weight: 400;
+		text-transform: uppercase;
+		border: 2px solid #a2ffa2;
+		border-radius: 3px;
+		padding: 10px 20px;
+		width: 119px;
+		text-decoration: none;
+		">
+			Automatic Fix 
+</a>
 	<canvas width="500" height="720" id="canv" >
 
 	<script type="text/javascript">
