--- a/index.html
+++ b/index.html
@@ -33,49 +33,49 @@
 		text-align: center;
 		font-family: Noto Sans , sans-serif;
 		z-index: 999;
-		color: #a2ffa2;
+		color: #fff;
 		font-size: 12px;
-		font-weight: 400;
+		font-weight: 700;
 		text-transform: uppercase;
 		">
-			The 
+			Bodhi 
 	</section>
 
 	<figure translate="yes" style="
 		position: absolute;
-		top: 200px;
+		top: 207px;
 		right: 0;
 		left: 0;
 		margin: auto;
 		text-align: center;
 		font-family: 'Orbitron', Noto Sans , sans-serif;
 		z-index: 999;
-		color: #a2ffa2;
+		color: #fff;
 		font-size: 37px;
 		font-weight: 700;
 		text-transform: uppercase;
 	">
 			<!-- <img src="waving_hand_black_24dp.svg" alt="FRIENDS">  -->
-		Glitch
+		Intellect
 			<!-- <img src="volunteer_activism_black_24dp.svg" alt="love"> -->
 	</figure>
-	<section contenteditable="true" translate="yes" style="
+	<section contenteditable="false" translate="yes" style="
 		position: absolute;
-		top: 245px;
+		top: 260px;
 		right: 0;
 		left: 0;
 		margin: auto;
 		text-align: center;
 		font-family: Noto Sans , sans-serif;
 		z-index: 999;
-		color: #a2ffa2;
-		font-size: 16px;
+		color: #fff;
+		font-size: 12px;
 		font-weight: 400;
 		text-transform: uppercase;
 		">
-			Manual Code Mode
+			Manual Code Change
 	</section>
-	<a href="https://bodhiintellect.com" contenteditable="false" translate="yes" style="
+	<a href="https://wa.me/7510726715/?text=Manual%20Code%20Change" contenteditable="false" translate="yes" style="
 		position: absolute;
     	top: 300px;
 		right: 0;
@@ -84,17 +84,17 @@
 		text-align: center;
 		font-family: Noto Sans , sans-serif;
 		z-index: 999;
-		color: #FFD700;
+		color: #fff;
 		font-size: 12px;
 		font-weight: 400;
 		text-transform: uppercase;
-		border: 2px solid #a2ffa2;
+		border: 2px solid #fff;
 		border-radius: 3px;
 		padding: 10px 20px;
 		width: 119px;
 		text-decoration: none;
 		">
-			Automatic Fix 
+			Change Now 
 </a>
 	<canvas width="500" height="720" id="canv" >
 
@@ -108,7 +108,7 @@
 	const h = canvas.height = document.body.offsetHeight;
 
 	// draw a black rectangle of width and height same as that of the canvas
-	ctx.fillStyle = '#000';
+	ctx.fillStyle = '#01295f';
 	ctx.fillRect(0, 0, w, h);
 
 	const cols = Math.floor(w / 19) + 1;
@@ -116,11 +116,11 @@
 
 	function matrix () {
 		// Draw a semitransparent black rectangle on top of previous drawing
-		ctx.fillStyle = '#0001';
+		ctx.fillStyle = '#01295f';
 		ctx.fillRect(0, 0, w, h);
 
 		// Set color to green and font to 15pt monospace in the drawing context
-		ctx.fillStyle = '#0f0';
+		ctx.fillStyle = '#2e405e';
 		ctx.font = '10pt Noto Sans';
 
 		// for each column put a random character at the end
