--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 		font-weight: 400;
 		text-transform: uppercase;
 		">
-			Manual Code Change
+			 Choose what matches you
 	</section>
-	<a href="https://wa.me/7510726715/?text=Manual%20Code%20Change" contenteditable="false" translate="yes" style="
+	<a href="https://wa.me/7510726715/?text=I%20would%20like%20know%20more%20about%20www.bodhiintellect.com" contenteditable="false" translate="yes" style="
 		position: absolute;
     	top: 300px;
 		right: 0;
@@ -94,7 +94,7 @@
 		width: 119px;
 		text-decoration: none;
 		">
-			Change Now 
+			Choose Now 
 </a>
 	<canvas width="500" height="720" id="canv" >
 
@@ -120,7 +120,7 @@
 		ctx.fillRect(0, 0, w, h);
 
 		// Set color to green and font to 15pt monospace in the drawing context
-		ctx.fillStyle = '#2e405e';
+		ctx.fillStyle = '#01295f';
 		ctx.font = '10pt Noto Sans';
 
 		// for each column put a random character at the end
@@ -141,7 +141,7 @@
 	}
 
 	// render the animation at 20 FPS.
-	setInterval(matrix, 60);
+	setInterval(matrix, 200);
 	</script>
 	
 </body>
