--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>Matrix | Welcome Dev A Is</title>
+  <title>Book | Welcome</title>
   <script src="https://unpkg.com/vue"></script>
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -75,7 +75,7 @@
 		">
 			 Choose what matches you
 	</section>
-	<a href="https://wa.me/7510726715/?text=I%20would%20like%20know%20more%20about%20www.bodhiintellect.com" contenteditable="false" translate="yes" style="
+	<a lang="san" consent='सत्यम्' धनीका href="https://wa.me/7510726715/?text=I%20would%20like%20know%20more%20about%20www.bodhiintellect.com" contenteditable="false" translate="yes" style="
 		position: absolute;
     	top: 300px;
 		right: 0;
