--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 		">
 			 Choose what matches you
 	</section>
-	<a lang="san" consent='सत्यम्' धनीका href="https://wa.me/+917510726715/?text=I%20would%20like%20know%20more%20about%20www.bodhiintellect.com" contenteditable="false" translate="yes" style="
+	<a lang="san" consent='सत्यम्' धनीका href="https://wa.me/+917510726715/?text=I%20would%20like%20to%20know%20more%20about%20www.bodhiintellect.com" contenteditable="false" translate="yes" style="
 		position: absolute;
     	top: 300px;
 		right: 0;
