--- a/index.html
+++ b/index.html
@@ -96,7 +96,11 @@
 		">
 			Choose Now 
 </a>
-	<canvas width="500" height="720" id="canv" >
+<figure>
+	<img src="digitalimage.jpeg" alt="Digital image NFT" style="font-size: 12px; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
+	<figcaption style="font-size: 12px;">Digital Image Art Work</figcaption>
+</figure>
+	<!-- <canvas width="500" height="720" id="canv" > -->
 
 	<script type="text/javascript">
 	// Get the canvas node and the drawing context
