--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 			Choose Now 
 </a>
 <figure>
-	<img src="digitalimage.jpeg" alt="Digital image NFT" style="font-size: 12px; width: 100%; height: auto; margin-left: auto; margin-right: auto;">
+	<img width="563" height="563" src="digitalimage.jpeg" alt="Digital image NFT" style="font-size: 12px; display: block; margin-left: auto; margin-right: auto;">
 	<figcaption style="font-size: 12px;">Digital Image Art Work</figcaption>
 </figure>
 	<!-- <canvas width="500" height="720" id="canv" > -->
