--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 		font-size: 12px;
 		font-weight: 700;
 		text-transform: uppercase;
+		visibility: hidden;
 		">
 			Bodhi 
 	</section>
@@ -54,6 +55,7 @@
 		font-size: 37px;
 		font-weight: 700;
 		text-transform: uppercase;
+		visibility: hidden;
 	">
 			<!-- <img src="waving_hand_black_24dp.svg" alt="FRIENDS">  -->
 		Intellect
@@ -72,6 +74,7 @@
 		font-size: 12px;
 		font-weight: 400;
 		text-transform: uppercase;
+		visibility: hidden;
 		">
 			 Choose what matches you
 	</section>
@@ -94,7 +97,7 @@
 		width: 119px;
 		text-decoration: none;
 		">
-			Choose Now 
+			Talk Now 
 </a>
 <figure>
 	<img width="563" height="563" src="digitalimage.jpeg" alt="Digital image NFT" style="font-size: 12px; display: block; margin-left: auto; margin-right: auto;">
