--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 </a>
 <figure>
 	<img width="563" height="563" src="digitalimage.jpeg" alt="Digital image NFT" style="font-size: 12px; display: block; margin-left: auto; margin-right: auto;">
-	<figcaption style="font-size: 12px;">Digital Image Art Work</figcaption>
+	<figcaption style="font-size: 12px; text-align: center; margin-top: 10px;">Digital Image Art Work</figcaption>
 </figure>
 	<!-- <canvas width="500" height="720" id="canv" > -->
 
