--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		width: 119px;
 		text-decoration: none;
 		">
-			Talk Now 
+			Talk
 </a>
 <figure>
 	<img width="563" height="563" src="digitalimage.jpeg" alt="Digital image NFT" style="font-size: 12px; display: block; margin-left: auto; margin-right: auto;">
